--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -6,3 +6,13 @@
     <h1 class="display-4">Welcome back to back</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@if (User.Identity.IsAuthenticated)
+{
+    <a href="/Home/Logout">Logout</a>
+}
+else
+{
+    <a href="/Home/Login">Login</a>
+}
+
