--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -18,52 +18,101 @@
             font-family: sans-serif;
             width: 100%;
             height: 100%;
+            background-color: darkseagreen;
         }
 
         .section-top {
             width: 100%;
-            height: 100%;
-            overflow: hidden;
+            height: 100vh;
             position: relative;
-            background-image: url('https://images.everydayhealth.com/images/healthy-living/fitness/everything-you-need-know-about-fitness-1440x810.jpg');
-            background-repeat: no-repeat;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-size: cover;
+            background-position: center center;
+            transition: background-image 1s ease-in-out;
+            background-image: url('https://www.fitnessworld.ca/wp-content/uploads/2023/12/Regular-Promo-Banner.jpg')
         }
-
         .content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            
             text-transform: uppercase;
             text-align: center;
         }
 
         .content h1 {
             color: white;
+            font-weight: bolder;
             font-size: 60px;
             letter-spacing: 3px;
+            background-color: rgb(25,25,25);
+            border-radius: 20px;
+            opacity: 0.9;
+        }
 
+        .content h3 {
+            display: inline-block;
+            color: white;
+            font-size: 30px;
+            padding: 10px;
+            font-weight: bold;
+            font-style: italic;
+            background-color: rgb(25,25,25);
+            border-radius: 15px;
+            text-decoration: none;
+            opacity: 0.85;
         }
 
         .content a {
             background: #0984e3;
+            margin: 20px;
             padding: 10px 24px;
             color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 30px;
             border-radius: 20px;
+        }
+
+        p {
+            font-size: 20px;
+            padding: 10px;
+            line-height: 24px;
         }
 
         
     </style>
 </head>
 <body>
-   <div class="section-top">
+   <div id="slideshow" class="section-top">
         <div class="content">
             <h1>Super Body Fitness</h1>
+            <h3>Effortless Workout Planning</h3>
+            <h3>Healthy Meal Plans</h3>
             <a href="#">Try out now!</a>
         </div>
    </div>
+   <p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p>
+
+    <script>
+        const images = [
+            'https://images.everydayhealth.com/images/healthy-living/fitness/everything-you-need-know-about-fitness-1440x810.jpg',
+            'https://www.fitnessworld.ca/wp-content/uploads/2023/12/Regular-Promo-Banner.jpg',
+            'https://media.post.rvohealth.io/wp-content/uploads/2023/10/Hub_facebook_fitness_1200x628.jpg'
+        ];
+
+        let currentIndex = 0;
+        const slideshowElement = document.getElementById('slideshow');
+
+        function changeImage() {
+            slideshowElement.style.backgroundImage = `url(${images[currentIndex]})`;
+            currentIndex = (currentIndex + 1) % images.length; //loop back to the start
+        }
+
+        //initial image
+        changeImage();
+
+        //change image every 10 seconds
+        setInterval(changeImage, 10000);
+    </script>
 </body>
 </html>
