making a logout page

--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
             <a href="#">Try out now!</a>
         </div>
    </div>
-   <p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p>
+   <!--<p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p> -->
 
     <script>
         const images = [
