--- a/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
@@ -20,6 +20,15 @@
             float: right;
         }
 
+        .navbar-brand {
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+
+        .nav-item {
+            float: right;
+        }
     </style>
 </head>
 <body>
