made a better login button and also edited the frontpage

--- a/ENTP_Project/Views/App/Homepage.cshtml
+++ b/ENTP_Project/Views/App/Homepage.cshtml
@@ -119,6 +119,7 @@
                 <p>Total Steps: </p>
                 <p>Time spent exercising: </p>
                 <p>Weight lost: </p>
+                <p>Workouts completed: </p>
                 <p>Classes completed: </p>
             </div>
         </div>
