--- a/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
@@ -21,7 +21,6 @@
         }
 
         .navbar-brand {
-            font-size: 40px;
             font-weight: bold;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
@@ -29,19 +28,67 @@
         .nav-item {
             float: right;
         }
+
+        .dropbtn {
+            border: none;
+            cursor: pointer;
+            background-color: rgb(25,25,25);
+            
+        }
+
+        .dropdown {
+            background-color: rgb(25,25,25);
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: rgb(255,255,255);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            opacity: 0.9;
+        }
+
+        .dropdown-content a {
+            color: black;
+            font-size: 20px;
+            font-weight: bold;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: rgb(200,200,200);
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .profile {
+            width: 40px;
+            height: 40px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav style="background-color: rgb(25,25,25);" class="navbar navbar-expand-sm navbar-dark box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Super Body Fitness</a>
+                <a style="font-size: 30px;"class="navbar-brand" href="/">Super Body Fitness</a>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a style="font-size: 20px;" class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Index">Workouts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a style="font-size: 20px;" class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Privacy">Meal Plans</a>
                     </li>
                 </ul>
                 @if (User.Identity.IsAuthenticated)
@@ -52,7 +99,17 @@
                 }
                 else
                 {
-                    <a class="account-button navbar-link text-bright"  href="/Home/Login">Login</a>
+                    <div class="dropdown" style="float: right;">
+                        <button class="dropbtn">
+                            <img class="profile" src="https://static.vecteezy.com/system/resources/previews/005/129/844/non_2x/profile-user-icon-isolated-on-white-background-eps10-free-vector.jpg" />
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="/Home/Login">Login</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </div>
+                    </div>
+                    
+                    
                 }
                 
             </div>
