--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
             <h1>Super Body Fitness</h1>
             <h3>Effortless Workout Planning</h3>
             <h3>Healthy Meal Plans</h3>
-            <a href="#">Try out now!</a>
+            <a href="/Home/Login">Try out now!</a>
         </div>
    </div>
    <!--<p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p> -->
