--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -28,6 +28,53 @@
         .nav-item {
             float: right;
         }
+
+        .dropbtn {
+            border: none;
+            cursor: pointer;
+            background-color: rgb(25,25,25);
+        }
+
+        .dropdown {
+            background-color: rgb(25,25,25);
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: rgb(255,255,255);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            opacity: 0.95;
+        }
+
+        .dropdown-content a {
+            color: black;
+            font-size: 20px;
+            font-weight: bold;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: rgb(200,200,200);
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .profile {
+            width: 40px;
+            height: 40px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
@@ -45,12 +92,29 @@
                 </ul>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <a class="account-button navbar-link text-bright" href="/App/Homepage">Home</a>
-                    <a class="account-button navbar-link text-bright" href="/Home/Logout">Logout</a>
+                    <div class="dropdown" style="float: right;">
+                        <button class="dropbtn">
+                            <img class="profile" src="https://static.vecteezy.com/system/resources/previews/005/129/844/non_2x/profile-user-icon-isolated-on-white-background-eps10-free-vector.jpg" />
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="/App/Homepage">Home</a>
+                            <a href="#">Settings</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a href="/Home/Logout">Logout</a>
+                        </div>
+                    </div>
                 }
                 else
                 {
-                    <a class="account-button navbar-link text-bright" href="/Home/Login">Login</a>
+                    <div class="dropdown" style="float: right;">
+                        <button class="dropbtn">
+                            <img class="profile" src="https://static.vecteezy.com/system/resources/previews/005/129/844/non_2x/profile-user-icon-isolated-on-white-background-eps10-free-vector.jpg" />
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="/Home/Login">Login</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </div>
+                    </div>
                 }
 
             </div>
