attempting to make a signup page to get user info

--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -84,10 +84,10 @@
                 <a class="navbar-brand" href="/">Super Body Fitness</a>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a style="font-size: 20px;" href="#" class="nav-link text-bright">Workouts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a style="font-size: 20px;" class="nav-link text-bright" href="#">Meal Plans</a>
                     </li>
                 </ul>
                 @if (User.Identity.IsAuthenticated)
