--- a/ENTP_Project/Views/Home/Onboarding.cshtml
+++ b/ENTP_Project/Views/Home/Onboarding.cshtml
@@ -2,4 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = null;
 }
+<html>
+    <head>
+        <style>
+
+        </style>
+    </head>
+    <body>
+        <p>THE COLOR</p>
+    </body>
+</html>
