--- a/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
@@ -14,7 +14,7 @@
             border-radius: 20px;
             color: rgb(25,25,25);
             padding: 10px;
-            font-size: 15px;   
+            font-size: 15px;
             text-decoration: none;
             margin: 10px;
             float: right;
@@ -33,7 +33,6 @@
             border: none;
             cursor: pointer;
             background-color: rgb(25,25,25);
-            
         }
 
         .dropdown {
@@ -53,19 +52,19 @@
             opacity: 0.95;
         }
 
-        .dropdown-content a {
-            color: black;
-            font-size: 20px;
-            font-weight: bold;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
+            .dropdown-content a {
+                color: black;
+                font-size: 20px;
+                font-weight: bold;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
 
-        .dropdown-content a:hover {
-            background-color: rgb(200,200,200);
-        }
+                .dropdown-content a:hover {
+                    background-color: rgb(200,200,200);
+                }
 
         .dropdown:hover .dropdown-content {
             display: block;
@@ -82,7 +81,7 @@
     <header>
         <nav style="background-color: rgb(25,25,25);" class="navbar navbar-expand-sm navbar-dark box-shadow">
             <div class="container-fluid">
-                <a style="font-size: 30px;"class="navbar-brand" href="/">Super Body Fitness</a>
+                <a style="font-size: 30px;" class="navbar-brand" href="/">Super Body Fitness</a>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a style="font-size: 20px;" class="nav-link text-bright" asp-area="" asp-controller="Home" asp-action="Index">Workouts</a>
@@ -112,21 +111,16 @@
                             <img class="profile" src="https://static.vecteezy.com/system/resources/previews/005/129/844/non_2x/profile-user-icon-isolated-on-white-background-eps10-free-vector.jpg" />
                         </button>
                         <div class="dropdown-content">
-                            <a href="@Url.Action("Login", "Home")">Login</a>
-                            <a href="@Url.Action("Login", "Home")?screen_hint=signup">Sign Up</a>
+                            <a href="/Home/Login">Login</a>
+                            <!--<a href="@@Url.Action("Login", "Home")?screen_hint=signup">Sign Up</a> -->
                             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </div>
                     </div>
                 }
-
-                
             </div>
         </nav>
     </header>
-    
-    @RenderBody()  <!-- This will render the specific page content -->
-    
 
-    
+    @RenderBody()  <!-- This will render the specific page content -->
 </body>
 </html>
