--- a/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
@@ -111,7 +111,7 @@
                             <img class="profile" src="https://static.vecteezy.com/system/resources/previews/005/129/844/non_2x/profile-user-icon-isolated-on-white-background-eps10-free-vector.jpg" />
                         </button>
                         <div class="dropdown-content">
-                            <a href="/Home/Login">Login</a>
+                            <a href="@Url.Action("Login","Home")">Login</a>
                             <!--<a href="@@Url.Action("Login", "Home")?screen_hint=signup">Sign Up</a> -->
                             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </div>
