working on a profile page

--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -93,7 +93,7 @@
    </div>
    <!--<p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p> -->
 
-    <script>
+    <script> //this script is for the homepage, changes the background images every so
         const images = [
             'https://images.everydayhealth.com/images/healthy-living/fitness/everything-you-need-know-about-fitness-1440x810.jpg',
             'https://www.fitnessworld.ca/wp-content/uploads/2023/12/Regular-Promo-Banner.jpg',
