--- a/ENTP_Project/Views/Home/LoggedOut.cshtml
+++ b/ENTP_Project/Views/Home/LoggedOut.cshtml
@@ -48,8 +48,8 @@
         }
     </style>
 </head>
-<body>
-    <div class="name">
+<body> <!--just a page to show user's they logged out-->
+    <div class="name"> 
         <h1>Super Body Fitness</h1>
     </div>
     <div class="image">
