--- a/ENTP_Project/Views/Home/Onboarding.cshtml
+++ b/ENTP_Project/Views/Home/Onboarding.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 <html>
-    <head>
+    <head><!--IGNORE, DONT NEED AT ALL AFTER ALL, USING AUTH0 TO DO STUFF-->
         <style>
 
         </style>
