--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -2,4 +2,52 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            .section {
+                justify-content: center;
+                padding: 50px;
+                width: 35%;
+            }
+
+            .section h3 {
+                padding: 10px;
+                border: 1px solid black;
+                font-size: 24px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            }
+
+            .section p {
+                
+                font-size: 20px;
+                border: 0px 0px 1px 0px solid black;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            }
+
+            .section h1 {
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-size: 36px;
+                font-weight: bold;
+                
+            }
+        </style>
+    </head>
+    <body>
+        <div class="section">
+            <h1>Profile</h1>
+            <p>Your information is hidden and secure. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn more</a></p>
+
+            <h3>Name: </h3>
+            <h3>Email: </h3>
+            <h3>Phone: </h3>
+            <h3>Role: </h3>
+            <h3>Dietary Restriction: </h3>
+            <h3>Fitness Plan: </h3>
+        </div>
+    </body>
+</html>
