--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -57,7 +57,7 @@
             font-size: 20px;
             font-weight: bold;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            padding: 12px 16px;
+            padding: 12px 24px;
             text-decoration: none;
             display: block;
         }
@@ -98,7 +98,8 @@
                         </button>
                         <div class="dropdown-content">
                             <a href="/App/Homepage">Home</a>
-                            <a href="#">Settings</a>
+                            <a href="/App/Profile">Profile</a>
+                            <a href="/App/Settings">Settings</a>
                             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             <a href="/Home/Logout">Logout</a>
                         </div>
