--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -1,53 +1,69 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model ENTP_Project.Models.RegistrationModel
 @{
     Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            .section {
-                justify-content: center;
-                padding: 50px;
-                width: 35%;
+<head>
+    <style>
+        .center-content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Takes up full viewport height */
+        }
+
+        .section {
+            padding: 70px;
+            width: 100%;
+            max-width: 600px; /* Restrict the max width */
+            background-color: #f9f9f9; /* Optional background for better visibility */
+            text-align: center;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow */
+            border-radius: 10px; /* Rounded corners */
+        }
+
+            .section h3, .section h1, .section p {
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                text-align: left;
             }
 
             .section h3 {
                 padding: 10px;
-                border: 1px solid black;
+                border-style: solid;
+                border-width: 1px 0px 0px 0px;
+                border-color: rgb(130,130,130);
                 font-size: 24px;
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             }
 
             .section p {
-                
                 font-size: 20px;
-                border: 0px 0px 1px 0px solid black;
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                margin-bottom: 30px;
             }
 
             .section h1 {
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 font-size: 36px;
                 font-weight: bold;
-                
             }
-        </style>
-    </head>
-    <body>
+    </style>
+</head>
+<body>
+    <div class="center-content">
         <div class="section">
             <h1>Profile</h1>
             <p>Your information is hidden and secure. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn more</a></p>
 
-            <h3>Name: </h3>
+            <h3>Name: @Model.Name</h3>
             <h3>Email: </h3>
-            <h3>Phone: </h3>
-            <h3>Role: </h3>
-            <h3>Dietary Restriction: </h3>
-            <h3>Fitness Plan: </h3>
+            <h3>Phone: @Model.Phone</h3>
+            <h3>Role: @Model.Role</h3>
+            <h3>Dietary Restriction: @Model.Diet</h3>
+            <h3 style="border-width:1px 0px 1px 0px;">Fitness Plan: @Model.Plan</h3>
         </div>
-    </body>
+    </div>
+</body>
 </html>
