finally got the registration to work but theres still stuff to iron out

--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -57,12 +57,12 @@
             <h1>Profile</h1>
             <p>Your information is hidden and secure. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn more</a></p>
 
-            <h3>Name: @Model.Name</h3>
-            <h3>Email: </h3>
-            <h3>Phone: @Model.Phone</h3>
-            <h3>Role: @Model.Role</h3>
-            <h3>Dietary Restriction: @Model.Diet</h3>
-            <h3 style="border-width:1px 0px 1px 0px;">Fitness Plan: @Model.Plan</h3>
+            <h3><b>Name:</b>  @Model.Name</h3>
+            <h3><b>Email:</b>  @Model.Email</h3>
+            <h3><b>Phone:</b>  @Model.Phone</h3>
+            <h3><b>Role:</b>  @Model.Role</h3>
+            <h3><b>Dietary Restriction:</b>  @Model.Diet</h3>
+            <h3 style="border-width:1px 0px 1px 0px;"><b>Fitness Plan:</b>  @Model.Plan</h3>
         </div>
     </div>
 </body>
