--- a/ENTP_Project/Views/App/Workouts.cshtml
+++ b/ENTP_Project/Views/App/Workouts.cshtml
@@ -2,4 +2,16 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+
+        </style>
+    </head>
+    <body>
+
+    </body>
+</html>
