--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -84,10 +84,10 @@
                 <a class="navbar-brand" href="/">Super Body Fitness</a>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a style="font-size: 20px;" href="#" class="nav-link text-bright">Workouts</a>
+                        <a style="font-size: 20px;" href="/App/Workouts" class="nav-link text-bright">Workouts</a>
                     </li>
                     <li class="nav-item">
-                        <a style="font-size: 20px;" class="nav-link text-bright" href="#">Meal Plans</a>
+                        <a style="font-size: 20px;" class="nav-link text-bright" href="/App/Meals">Meal Plans</a>
                     </li>
                 </ul>
                 @if (User.Identity.IsAuthenticated)
