--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -35,6 +35,7 @@
             .section h3 {
                 padding: 10px;
                 border-style: solid;
+                color: rgb(25,25,25);
                 border-width: 1px 0px 0px 0px;
                 border-color: rgb(130,130,130);
                 font-size: 24px;
@@ -48,6 +49,15 @@
             .section h1 {
                 font-size: 36px;
                 font-weight: bold;
+            }
+
+            .section button {
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+                margin-top: 25px;
+                border-radius: 20px;
+                font-size: 20px;
+                font-weight: bold;
+                background-color: rgb(102,178,255);
             }
     </style>
 </head>
@@ -63,6 +73,7 @@
             <h3><b>Role:</b>  @Model.Role</h3>
             <h3><b>Dietary Restriction:</b>  @Model.Diet</h3>
             <h3 style="border-width:1px 0px 1px 0px;"><b>Fitness Plan:</b>  @Model.Plan</h3>
+            <button href="#">Edit Profile</button>
         </div>
     </div>
 </body>
