working on a profile change form

--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -72,8 +72,9 @@
             <h3><b>Phone:</b>  @Model.Phone</h3>
             <h3><b>Role:</b>  @Model.Role</h3>
             <h3><b>Dietary Restriction:</b>  @Model.Diet</h3>
-            <h3 style="border-width:1px 0px 1px 0px;"><b>Fitness Plan:</b>  @Model.Plan</h3>
-            <button href="#">Edit Profile</button>
+            <h3><b>Fitness Plan:</b>  @Model.Plan</h3>
+            <h3 style="border-width:1px 0px 1px 0px;"><b>Weight: </b> @Model.Weight lbs</h3>
+            <button href="/App/ProfileChange">Edit Profile</button>
         </div>
     </div>
 </body>
