--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -13,8 +13,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh; /* Takes up full viewport height */
-                
+                height: 100vh; /* Takes up full viewport height */              
             }
 
             input, select {
@@ -33,10 +32,10 @@
                 background-color: #f9f9f9; 
                 text-align: center;
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
-                border-radius: 10px; 
+                border-radius: 10px;                
             }
 
-                .section h2, .section p {
+                .section h2, .section p, .section h1 {
                     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                     text-align: left;
                 }
@@ -69,61 +68,68 @@
                     font-weight: bold;
                     background-color: rgb(102,178,255);
                 }
+
+                .section h1 {
+                    text-align: center;
+                    font-size: 28px;
+                    font-weight: bold;
+                
+                }
         </style>
     </head>
     <body>
-    <form class="center-content" asp-action="RegistrationModel" method="post">
-        <div class="section">
-            <div class="input">
-                <h2>Your name:</h2>
-                <input asp-for="Name" required placeholder="Ex: Dylan Tran" />
-            </div>
+        
+        <form class="center-content" asp-action="RegistrationModel" method="post">
+            <div class="section">
+                <h1>Profile Change Form</h1>
+                <div class="input">
+                    <h2>Your name:</h2>
+                    <input asp-for="Name" required placeholder="Ex: Dylan Tran" />
+                </div>
 
-            <div class="input">
-                <h2>Your email:</h2>
-                <input asp-for="Email" required type="email" placeholder="Ex: tradylan@sheridancollege.ca" />
-            </div>
+                <div class="input">
+                    <h2>Your email:</h2>
+                    <input asp-for="Email" required type="email" placeholder="Ex: tradylan@sheridancollege.ca" />
+                </div>
 
-            <div class="input">
-                <h2>Your phone number:</h2>
-                <input asp-for="Phone" required type="tel" pattern="[0-9]{9}" placeholder="Ex: 1234567890" />
+                <div class="input">
+                    <h2>Your phone number:</h2>
+                    <input asp-for="Phone" required type="tel" pattern="[0-9]{9}" placeholder="Ex: 1234567890" />
                 
-            </div>
+                </div>
 
-            <div class="input">
-                <h2>Your role: </h2>
-                <select name="Role" required>
-                    <option selected="selected" value="">Please select your role</option>
-                    <option value="User">User</option>
-                    <option value="Coach/Trainer">Coach/Trainer</option>
-                </select>
-            </div>
+                <div class="input">
+                    <h2>Your role: </h2>
+                    <select name="Role" required>                   
+                        <option selected="selected" value="User">User</option>
+                        <option value="Coach/Trainer">Coach/Trainer</option>
+                    </select>
+                </div>
 
-            <div class="input">
-                <h2>Dietary Restriction: </h2>
-                <select name="Diet" required>
-                    <option selected="selected" value="">Please select the device type</option>
-                    <option value="None">None</option>
-                    <option value="Vegetarian">Vegetarian</option>
-                    <option value="Vegan">Vegan</option>
-                    <option value="Halal">Halal</option>
-                    <option value="Kosher">Kosher</option>
-                    <option value="Keto">Keto</option>
-                    <option value="Lactose Intolerant">Lactose Intolerant</option>
-                    <option value="Gluten-free">Gluten-free</option>
-                    <option value="Diabetes Diet">Diabetes Diet</option>
-                    <option value="Low-sodium Diet">Low-sodium Diet</option>
-                </select>
-            </div>
+                <div class="input">
+                    <h2>Dietary Restriction: </h2>
+                    <select name="Diet" required>           
+                        <option selected="selected" value="None">None</option>
+                        <option value="Vegetarian">Vegetarian</option>
+                        <option value="Vegan">Vegan</option>
+                        <option value="Halal">Halal</option>
+                        <option value="Kosher">Kosher</option>
+                        <option value="Keto">Keto</option>
+                        <option value="Lactose Intolerant">Lactose Intolerant</option>
+                        <option value="Gluten-free">Gluten-free</option>
+                        <option value="Diabetes Diet">Diabetes Diet</option>
+                        <option value="Low-sodium Diet">Low-sodium Diet</option>
+                    </select>
+                </div>
 
-            <div class="input">
-                <h2>New weight (in pounds): </h2>
-                <input asp-for="Weight" required type="number" placeholder="Ex: 180" style="border-width: 0px 0px 1px 0px; border-color: rgb(130,130,130); margin-bottom: 20px;" />
-            </div>
+                <div class="input">
+                    <h2>New weight (in pounds): </h2>
+                    <input asp-for="Weight" required type="number" placeholder="Ex: 180" style="border-width: 0px 0px 1px 0px; border-color: rgb(130,130,130); margin-bottom: 20px;" />
+                </div>
 
-            <p>If you'd like to change your subscription plan, please visit <a>here</a>.</p>
-            <button type="submit">Submit Request</button>
-        </div>
-    </form>
+                <p>If you'd like to change your subscription plan, please visit <a>here</a>.</p>
+                <button type="submit">Submit Request</button>
+            </div>
+        </form>
     </body>
 </html>
