--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -13,7 +13,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh; /* Takes up full viewport height */              
+                height: auto; /* Takes up full viewport height */              
             }
 
             input, select {
@@ -32,7 +32,8 @@
                 background-color: #f9f9f9; 
                 text-align: center;
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
-                border-radius: 10px;                
+                border-radius: 10px;   
+                height: auto;
             }
 
                 .section h2, .section p, .section h1 {
