--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -65,7 +65,7 @@
                 color: rgb(30,30,30);
                 text-decoration: none;
                 border: 1px black;
-                
+                padding: 5px;
             }
     </style>
 </head>
