--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -13,7 +13,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: auto; /* Takes up full viewport height */              
+                height: auto;         
             }
 
             input, select {
