--- a/ENTP_Project/Views/App/Homepage.cshtml
+++ b/ENTP_Project/Views/App/Homepage.cshtml
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js"></script>
     <style>
         body {
-            background-color: rgb(250,250,250);
+            background-color: rgb(70,70,70);
         }
 
         .section-top {
@@ -26,7 +26,7 @@
         }
 
         .schedule, .monitor, .meals {
-            flex: 1; /* Equal width for all three sections */
+            flex: 1; 
             margin: 30px;
             padding: 30px;
             border-width: 1px;
@@ -35,11 +35,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            background-color: rgb(250,250,250); 
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
         }
 
         .calendar {
             text-align: center;
-            width: 100%; /* Ensure calendar takes full width of its parent */
+            width: 100%; 
             height: 100%;
         }
 
