--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -18,17 +18,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh; /* Takes up full viewport height */
+            height: 100vh; 
         }
 
         .section {
             padding: 70px;
             width: 100%;
-            max-width: 600px; /* Restrict the max width */
-            background-color: #f9f9f9; /* Optional background for better visibility */
+            max-width: 600px; 
+            background-color: #f9f9f9; 
             text-align: center;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow */
-            border-radius: 10px; /* Rounded corners */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+            border-radius: 10px; 
         }
 
             .section h3, .section h1, .section p {
