--- a/ENTP_Project/Views/Home/LoggedOut.cshtml
+++ b/ENTP_Project/Views/Home/LoggedOut.cshtml
@@ -17,7 +17,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            height: 100vh; /* Full height to vertically center content */
+            height: 100vh; 
             margin: 0;
         }
 
@@ -42,9 +42,9 @@
         }
 
         .image img {
-            width: 200px; /* Adjust size of the checkmark */
+            width: 200px; 
             height: 200px;
-            margin-bottom: 30px; /* Space between image and text */
+            margin-bottom: 30px; 
         }
     </style>
 </head>
