--- a/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_FrontPageLayout.cshtml
@@ -100,7 +100,7 @@
                             <a href="/App/Homepage">Home</a>
                             <a href="/App/Profile">Profile</a>
                             <a href="/App/Settings">Settings</a>
-                            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a href="#">Privacy</a>
                             <a href="/Home/Logout">Logout</a>
                         </div>
                     </div>
