comments, admin panel, privacy page, and visual changes
Dylan

--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -88,10 +88,10 @@
                     <input asp-for="Name" required placeholder="Ex: Dylan Tran" />
                 </div>
 
-                <div class="input">
+                <!--<div class="input">
                     <h2>Your email:</h2>
                     <input asp-for="Email" required type="email" placeholder="Ex: tradylan@sheridancollege.ca" />
-                </div>
+                </div> -->
 
                 <div class="input">
                     <h2>Your phone number:</h2>
