--- a/ENTP_Project/Views/Home/DemoMeals.cshtml
+++ b/ENTP_Project/Views/Home/DemoMeals.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "~/Views/Shared/_FrontPageLayout.cshtml";
 }
-
+<!--the purpose of this page is to display what customers/users can expect to find inside the service but not actually be accessible right now-->
 <html>
 <head>
 
