--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model ENTP_Project.Models.RegistrationModel
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -89,6 +90,12 @@
                     <li class="nav-item">
                         <a style="font-size: 20px;" class="nav-link text-bright" href="/App/Meals">Meal Plans</a>
                     </li>
+                    @if (ViewData["UserRole"]?.ToString() == "Admin")
+                    {
+                        <li class="nav-item">
+                            <a style="font-size: 20px;" class="nav-link text-bright" href="/App/Database">Admin Panel</a>
+                        </li>
+                    }
                 </ul>
                 @if (User.Identity.IsAuthenticated)
                 {
