--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -128,7 +128,7 @@
                     <input asp-for="Weight" required type="number" placeholder="Ex: 180" style="border-width: 0px 0px 1px 0px; border-color: rgb(130,130,130); margin-bottom: 20px;" />
                 </div>
 
-                <p>If you'd like to change your subscription plan, please visit <a>here</a>.</p>
+                <p>If you'd like to change your subscription plan, please visit <a href="#">here</a>.</p>
                 <button type="submit">Submit Request</button>
             </div>
         </form>
