--- a/ENTP_Project/Views/Home/Privacy.cshtml
+++ b/ENTP_Project/Views/Home/Privacy.cshtml
@@ -24,7 +24,7 @@
     <body>
         <div class="privacy">
             <h1>Privacy Policy</h1>
-            <p>Your information will not be shared to anyone else.</p>
+            <p>Your information will not be shared with anyone else.</p>
             <p>Your information will only be used for the purpose of this service.</p>
             <p>If you have any concerns or questions regarding your privacy, you may contact us at superbodyfitness@fakeemail.com</p>
         </div>
