--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -88,7 +88,15 @@
             <h1>Super Body Fitness</h1>
             <h3>Effortless Workout Planning</h3>
             <h3>Healthy Meal Plans</h3>
-            <a href="/Home/Login">Try out now!</a>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a href="/App/Homepage">Continue!</a>
+            }
+            else
+            {
+                <a href="/Home/Login">Try out now!</a>
+            }
+            
         </div>
    </div>
    <!--<p>Super Body Fitness is an online app that builds custom-fit workouts and makes healthy meal plans, designed to meet your goals on your own terms.</p> -->
