created the frontend chatting system, frontend library for workouts and meals, and made some visual changes, frontend stuff

--- a/ENTP_Project/Views/App/CreateMeal.cshtml
+++ b/ENTP_Project/Views/App/CreateMeal.cshtml
@@ -113,7 +113,7 @@
             <h1>Profile Change Form</h1>
 
             <div class="input">
-                <h2>Workout Title:</h2>
+                <h2>Meal Title:</h2>
                 <input asp-for="Title" required placeholder="Ex: Spaghetti and Meatballs" />
             </div>
 
