--- a/ENTP_Project/Views/App/Meals.cshtml
+++ b/ENTP_Project/Views/App/Meals.cshtml
@@ -28,9 +28,24 @@
             border-radius: 10px;
             text-align: center;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            height: 35vh;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
         }
 
+            .container img {
+                width: 100%; 
+                max-width: 90%; 
+                max-height: 50%; 
+                object-fit: contain; 
+                border-radius: 8px; 
+                margin-top: 10px;
+            }
+
+            .container h3 {
+                text-align: left;
+            }
        
         @@media (max-width: 900px) {
             .grid-container {
@@ -64,6 +79,7 @@
             .button-container a {
                 text-decoration: none;
                 color: black;
+                padding: 0px 3px;
             }
     </style>
 </head>
@@ -79,7 +95,10 @@
             @foreach (var container in containers)
             {
                 <div class="container">
-                    <h3>@container</h3>
+                    <h1>@container</h1>
+                    <img src="https://static1.squarespace.com/static/52143a7ae4b0f9bd8308dc73/t/62863150a9e10f302da17e60/1652961616058/Mili+logo_no+back_SQ.png?format=1500w" alt="Workout image" />
+                    <h3>Diet: </h3>
+                    <h3>Plan: </h3>
                 </div>
             }
         </div>
