trying to set up a database

--- a/ENTP_Project/Views/App/Database.cshtml
+++ b/ENTP_Project/Views/App/Database.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ENTP_Project.Models.RegistrationModel>
+﻿@model IEnumerable<ENTP_Project.Models.UserModel>
 
 @{
     Layout = "~/Views/Shared/_AppLayout.cshtml";
