--- a/ENTP_Project/Views/App/Workouts.cshtml
+++ b/ENTP_Project/Views/App/Workouts.cshtml
@@ -4,7 +4,7 @@
     // Example data (in a real scenario, this would come from a model)
     var containers = new List<string> { "Container 1", "Container 2", "Container 3", "Container 4", "Container 5", "Container 6", "Container 7" };
 }
-@model ENTP_Project.Models.RegistrationModel
+@model ENTP_Project.Models.UserModel
 <!DOCTYPE html>
 <html lang="en">
     <head>
