--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model ENTP_Project.Models.RegistrationModel
+@model ENTP_Project.Models.UserModel
 @{
     Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
