attempting to post and get data from database

--- a/ENTP_Project/Views/App/ProfileChange.cshtml
+++ b/ENTP_Project/Views/App/ProfileChange.cshtml
@@ -120,6 +120,7 @@
                         <option value="Gluten-free">Gluten-free</option>
                         <option value="Diabetes Diet">Diabetes Diet</option>
                         <option value="Low-sodium Diet">Low-sodium Diet</option>
+                        <option value="Other">Other</option>
                     </select>
                 </div>
 
