--- a/ENTP_Project/Views/App/Welcome.cshtml
+++ b/ENTP_Project/Views/App/Welcome.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
 @{
     Layout = null;
 }
@@ -51,8 +52,15 @@
     <body>
         <h1>Welcome!</h1>
         <p>Here at Super Body Fitness, we offer professionally-developed workouts for all skill levels and healthy meals created by prestigious chefs!</p>
-        <p>We are pleased to have you on onboard!</p>
+        <p>We are pleased to have you on onboard!</p>      
         <form asp-action="Welcomed" asp-controller="App" method="post">
+            <input type="text" name="Name" value="@Model.Name" />
+            <input type="email" name="Email" value="@Model.Email" />
+            <input type="text" name="Phone" value="@Model.Phone" />
+            <input type="text" name="Role" value="@Model.Role" />
+            <input type="text" name="Diet" value="@Model.Diet" />
+            <input type="text" name="Plan" value="@Model.Plan" />
+            <input type="number" name="Weight" value="@Model.Weight" />
             <button type="submit" id="button">Continue</button>
         </form>
 </body>
