create list of user in admin panel

--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -98,7 +98,7 @@
                     @if (ViewData["UserRole"]?.ToString() == "Admin")
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-bright" href="/App/Database">Admin Panel</a>
+                            <a class="nav-link text-bright" href="/App/Userlist">Admin Panel</a>
                         </li>
                     }
                     <li class="nav-item">
