working on the database functions

--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -1,5 +1,4 @@
-﻿@model ENTP_Project.Models.UserModel
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -98,7 +97,7 @@
                     @if (ViewData["UserRole"]?.ToString() == "Admin")
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-bright" href="/App/Userlist">Admin Panel</a>
+                            <a class="nav-link text-bright" href="/Admin/UserList">Admin Panel</a>
                         </li>
                     }
                     <li class="nav-item">
