updated some stuff

--- a/ENTP_Project/Views/Home/Index.cshtml
+++ b/ENTP_Project/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
             }
             else
             {
-                <a href="/Home/Login">Try out now!</a>
+                <a href="/Home/Login">Try now!</a>
             }
             
         </div>
